bug: Bug fixed to allow the region arrow jump to the top of the app

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,12 @@ body {
 .link {
   text-decoration: none;
 }
+#topRegion{
+  position: fixed;
+  top: 200px;
+  right: 0;
+  border-radius: 5px;
+  border: 2px solid red;
+  margin: 0 20px;
+  padding: 3px 7px;
+}
